covered up style that was covereing up my style. Should probably look back and fix this later.

--- a/ChessGameApp/src/resources/styles/Menu.css
+++ b/ChessGameApp/src/resources/styles/Menu.css
@@ -10,3 +10,8 @@
 .button:hover, .file-chooser-button:hover {
     -fx-background-color: #db3030;
 }
+
+/*Test*/
+.notYourMove {
+    -fx-background-color: #864c4c;
+}
